--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
+    <!--<LangVersion>8.0</LangVersion>-->
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
